quotes section - html

--- a/index.html
+++ b/index.html
@@ -675,6 +675,64 @@
       </div>
    </section>
    <!-- end of blog section -->
+   <!-- quote section -->
+   <section class="quote section-padding" id="quotes">
+      <!-- section title -->
+      <div class="section-title-container">
+         <!-- icon -->
+         <div class="section-title-icon">
+            <i class="fas fa-comments"></i>
+         </div>
+         <div class="section-title-text">
+            <h1 class="section-title-name section-title-name-yellow">what they say</h1>
+            <h4 class="section-title-info">Lorem ipsum dolor sit amet.</h4>
+         </div>
+      </div>
+      <!-- end of section title -->
+      <!-- quotes -->
+      <div class="flexbox-parent flexbox-parent-medium owl-carousel owl-theme">
+         <!-- single quote -->
+         <article class="quote">
+            <div class="quote-icon"><i class="fas fa-quote-left"></i></div>
+            <blockquote class="quote-text">
+               <p class="quote-value">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum eaque voluptates odio culpa! Ipsa quos neque rem tenetur quod accusantium, adipisci obcaecati tempore sint voluptate non explicabo amet esse! Rem suscipit sint mollitia illum laudantium. Accusantium sunt sint quod! Ut?</p>
+               <footer>
+                  <p class="quote-name">--customer john doe</p>
+                  <p class="quote-job">designer</p>
+               </footer>
+            </blockquote>
+            <article class="quote-img quote-img-1"></article>
+         </article>
+         <!-- end of single quote -->
+         <!-- single quote -->
+         <article class="quote quote-reverse">
+            <div class="quote-icon"><i class="fas fa-quote-left"></i></div>
+            <blockquote class="quote-text">
+               <p class="quote-value">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum eaque voluptates odio culpa! Ipsa quos neque rem tenetur quod accusantium, adipisci obcaecati tempore sint voluptate non explicabo amet esse! Rem suscipit sint mollitia illum laudantium. Accusantium sunt sint quod! Ut?</p>
+               <footer>
+                  <p class="quote-name">--customer john doe</p>
+                  <p class="quote-job">designer</p>
+               </footer>
+            </blockquote>
+            <article class="quote-img quote-img-1"></article>
+         </article>
+         <!-- end of single quote -->
+         <!-- single quote -->
+         <article class="quote">
+            <div class="quote-icon"><i class="fas fa-quote-left"></i></div>
+            <blockquote class="quote-text">
+               <p class="quote-value">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum eaque voluptates odio culpa! Ipsa quos neque rem tenetur quod accusantium, adipisci obcaecati tempore sint voluptate non explicabo amet esse! Rem suscipit sint mollitia illum laudantium. Accusantium sunt sint quod! Ut?</p>
+               <footer>
+                  <p class="quote-name">--customer john doe</p>
+                  <p class="quote-job">designer</p>
+               </footer>
+            </blockquote>
+            <article class="quote-img quote-img-1"></article>
+         </article>
+         <!-- end of single quote -->
+      </div>
+   </section>
+   <!-- end of quote section -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
