quotes section - css

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
    </section>
    <!-- end of blog section -->
    <!-- quote section -->
-   <section class="quote section-padding" id="quotes">
+   <section class="quotes section-padding" id="quotes">
       <!-- section title -->
       <div class="section-title-container">
          <!-- icon -->
@@ -714,7 +714,7 @@
                   <p class="quote-job">designer</p>
                </footer>
             </blockquote>
-            <article class="quote-img quote-img-1"></article>
+            <article class="quote-img quote-img-2"></article>
          </article>
          <!-- end of single quote -->
          <!-- single quote -->
@@ -727,7 +727,7 @@
                   <p class="quote-job">designer</p>
                </footer>
             </blockquote>
-            <article class="quote-img quote-img-1"></article>
+            <article class="quote-img quote-img-3"></article>
          </article>
          <!-- end of single quote -->
       </div>
