--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
    <link rel="stylesheet" href="./css/main.css">
    <!-- magnific -->
    <link rel="stylesheet" href="./plugins/magnific/magnific-popup.css">
+   <!-- owl carousel css -->
+   <link rel="stylesheet" href="./plugins/owl/owl.carousel.min.css">
+   <!-- owl carousel theme -->
+   <link rel="stylesheet" href="./plugins/owl/owl.theme.default.css">
 </head>
 <body>
    <!-- preloader -->
@@ -742,6 +746,10 @@
 <script src="./plugins/magnific/jquery.magnific-popup.min.js"></script>
 <!-- numscroller -->
 <script src="./plugins/numscroller-1.0.js"></script>
+<!-- owl carousel -->
+<script src="./plugins/owl/owl.carousel.min.js"></script>
+<!-- owl js -->
+<!-- <script src="./plugins/owl/owl.js"></script> -->
 <!-- app js -->
 <script src="./js/app.js"></script>
 </html>
