--- a/index.html
+++ b/index.html
@@ -737,6 +737,41 @@
       </div>
    </section>
    <!-- end of quote section -->
+   <!-- map -->
+   <section class="map" id="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d81987.37623186005!2d19.934833624953715!3d50.046854813641026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471644c0354e18d1%3A0xb46bb6b576478abf!2zS3Jha8Ozdw!5e0!3m2!1sen!2spl!4v1568560166685!5m2!1sen!2spl" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      <!-- map info -->
+      <div class="map-info flexbox-parent flexbox-parent-medium">
+         <!-- single item -->
+         <div class="map-item item-margin">
+            <div class="map-item-icon">
+               <i class="fas fa-map-marker-alt"></i>
+            </div>
+            <h2 class="map-item-title">meet us</h2>
+            <p class="map-item-text">555 business street krakow, pl</p>
+         </div>         
+         <!-- end of single item -->
+         <!-- single item -->
+         <div class="map-item item-margin">
+            <div class="map-item-icon">
+               <i class="fas fa-phone"></i>
+            </div>
+            <h2 class="map-item-title">call us</h2>
+            <p class="map-item-text">123 456 789</p>
+         </div>         
+         <!-- end of single item -->
+         <!-- single item -->
+         <div class="map-item item-margin">
+            <div class="map-item-icon">
+               <i class="fas fa-envelope"></i>
+            </div>
+            <h2 class="map-item-title">mail us</h2>
+            <p class="map-item-text">email@email.com</p>
+         </div>         
+         <!-- end of single item -->
+      </div>
+   </section>
+   <!-- end of map -->
 </body>
 <!-- font awesome -->
 <script src="./js/all.js"></script>
